// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenIcon component should Render correctly 1`] = `<EmptyIcon />`;

exports[`TokenIcon component should Render correctly 2`] = `
<RemoteImage
  fadeIn={true}
  onError={[Function]}
  source={
    Object {
<<<<<<< HEAD
<<<<<<< Updated upstream
      "testUri": "../../../app/images/eth-logo.png",
=======
      "default": Object {
        "uri": "MockImage",
      },
>>>>>>> Stashed changes
=======
      "testUri": "../../../app/images/eth-logo-new.png",
>>>>>>> upstream/testflight/4754-permission-system
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 12,
        "height": 24,
        "width": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`TokenIcon component should Render correctly 3`] = `
<EmptyIcon>
  <Text
<<<<<<< Updated upstream
    bigger={false}
    black={false}
    blue={false}
    bold={false}
    centered={false}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    muted={false}
    primary={false}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
=======
>>>>>>> Stashed changes
    style={
      Array [
        Object {
          "color": "#24272A",
          "fontSize": 16,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
        undefined,
        undefined,
        undefined,
      ]
    }
<<<<<<< Updated upstream
    underline={false}
    upper={false}
=======
>>>>>>> Stashed changes
  >
    C
  </Text>
</EmptyIcon>
`;

exports[`TokenIcon component should Render correctly 4`] = `
<RemoteImage
  fadeIn={true}
  onError={[Function]}
  source={
    Object {
      "uri": "https://cloudflare-ipfs.com/ipfs/QmNYVMm3iC7HEoxfvxsZbRoapdjDHj9EREFac4BPeVphSJ",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 12,
        "height": 24,
        "width": 24,
      },
      undefined,
      undefined,
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`TokenIcon component should Render correctly 5`] = `
<EmptyIcon
  medium={true}
/>
`;

exports[`TokenIcon component should Render correctly 6`] = `
<RemoteImage
  fadeIn={true}
  onError={[Function]}
  source={
    Object {
<<<<<<< HEAD
<<<<<<< Updated upstream
      "testUri": "../../../app/images/eth-logo.png",
=======
      "default": Object {
        "uri": "MockImage",
      },
>>>>>>> Stashed changes
=======
      "testUri": "../../../app/images/eth-logo-new.png",
>>>>>>> upstream/testflight/4754-permission-system
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 12,
        "height": 24,
        "width": 24,
      },
      Object {
        "borderRadius": 18,
        "height": 36,
        "width": 36,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`TokenIcon component should Render correctly 7`] = `
<EmptyIcon
  medium={true}
>
  <Text
<<<<<<< Updated upstream
    bigger={false}
    black={false}
    blue={false}
    bold={false}
    centered={false}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    muted={false}
    primary={false}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
=======
>>>>>>> Stashed changes
    style={
      Array [
        Object {
          "color": "#24272A",
          "fontSize": 16,
          "textAlign": "center",
          "textAlignVertical": "center",
        },
        Object {
          "color": "#24272A",
          "fontSize": 22,
        },
        undefined,
        undefined,
      ]
    }
<<<<<<< Updated upstream
    underline={false}
    upper={false}
=======
>>>>>>> Stashed changes
  >
    C
  </Text>
</EmptyIcon>
`;

exports[`TokenIcon component should Render correctly 8`] = `
<RemoteImage
  fadeIn={true}
  onError={[Function]}
  source={
    Object {
      "uri": "https://cloudflare-ipfs.com/ipfs/QmNYVMm3iC7HEoxfvxsZbRoapdjDHj9EREFac4BPeVphSJ",
    }
  }
  style={
    Array [
      Object {
        "borderRadius": 12,
        "height": 24,
        "width": 24,
      },
      Object {
        "borderRadius": 18,
        "height": 36,
        "width": 36,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
/>
`;
